Update and rename index.htm to index.html

--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
 <div class="two-thirds">
 <h2>What’s New in ArtOS Antelope Canyon</h2>
 <p>ArtOS Antelope Canyon provide a new way to work, play or do what want. ArtOS integrate Windows 10 to use your Windows favourite apps</p>
-<a href="https://blog.artos.infinityfreeapp.com/" target="_blank" rel="noopener" class="read-more">Read the Changes</a>
+<a href="#" target="_blank" rel="noopener" class="read-more">Read the Changes</a>
 </div>
 </div>
 <!--</section>
