--- a/index.html
+++ b/index.html
@@ -177,11 +177,11 @@
 </div>
 <div class="showcase-tab" id="showcase-navigate">
 <div class="app-display">
-<img class="app-display__image" src="./images/screenshots/navigate.png" alt="Web screenshot" />
+<img class="app-display__image" src="/images/screenshots/navigate.png" alt="Web screenshot" />
 <div class="app-display__description">
 <img src="/images/icons/apps/navigate-beta.png" alt="Navigate icon" />
 <div>
-<h2>Navgate</h2>
+<h2>Navigate</h2>
 <p>Surf the web faster than ever. Watch videos, read or every things thant you can in a secure browser. A developer edition is available to make website and to add advanced features for developers.</p>
 </div>
 </div>
