--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@
 </div>
 </figure>
 <h4>Picture-in-Picture</h4>
-<p>Que vous regardiez un film, jouiez à un jeu ou travailliez sur un terminal, le mode Picture-in-Picture vous permet de garder un œil sur quelque chose tout en travaillant sur autre chose. </p>
+<p>You want to work and also watch a video? Thanks to the Picture-In-Picture you can. When you want, hover over the PiP icon on the video to activate it. </p>
 </div>
 <div class="third">
 <figure class="dnd">
