--- a/index.html
+++ b/index.html
@@ -165,7 +165,7 @@
 </div>
 <div class="showcase-tab" id="showcase-music">
 <div class="app-display">
-<img class="app-display__image" src="images/screenshots/music.PNG" width="1164" height="664" alt="Music screenshot" />
+<img class="app-display__image" src="images/screenshots/music.png" width="1164" height="664" alt="Music screenshot" />
 <div class="app-display__description">
 <img src="images/icons/apps/music.png" alt="Music icon" />
 <div>
