--- a/index.html
+++ b/index.html
@@ -177,7 +177,7 @@
 </div>
 <div class="showcase-tab" id="showcase-navigate">
 <div class="app-display">
-<img class="app-display__image" src="/images/screenshots/navigate.png" alt="Web screenshot" />
+<img class="app-display__image" src="images/screenshots/navigate.png" alt="Web screenshot" />
 <div class="app-display__description">
 <img src="images/icons/apps/navigate-beta.png" alt="Navigate icon" />
 <div>
@@ -201,7 +201,7 @@
 </div>
 <div class="showcase-tab" id="showcase-photos">
 <div class="app-display">
-<img class="app-display__image" src="../images/screenshots/photo.png" width="1174" height="730" alt="Photos screenshot" />
+<img class="app-display__image" src="images/screenshots/photo.png" width="1174" height="730" alt="Photos screenshot" />
 <div class="app-display__description">
 <img src="images/icons/apps/photo.png" alt="Photos icon" />
 <div>
