--- a/index.html
+++ b/index.html
@@ -127,13 +127,13 @@
 <div class="workspace">
 <img class="window" src="images/screenshots/makeanapp.png" width="1174" height="703" alt="MakeAnApp screenshot" />
 <div class="notification" type="notification">
-<img src="images/icons/apps/64/internet-mail.svg" />
+<img src="images/icons/apps/reminder.png" />
 </div>
 <div class="notification" type="notification">
-<img src="images/icons/apps/64/internet-mail.svg" />
+<img src="images/icons/apps/reminder.png" />
 </div>
 <div class="notification" type="notification">
-<img src="images/icons/apps/64/internet-mail.svg" />
+<img src="images/icons/apps/64/reminder.png" />
 </div>
 </div>
 </figure>
