--- a/index.html
+++ b/index.html
@@ -213,7 +213,7 @@
 </div>
 <div class="showcase-tab" id="showcase-videos">
 <div class="app-display">
-<img class="app-display__image" width="1124" height="555" alt="Videos screenshot" /> <!--src="images/screenshots/videos.png"-->
+<img class="app-display__image" src="images/screenshots/videos.png" width="1124" height="555" alt="Videos screenshot" />
 <div class="app-display__description">
 <img src="images/icons/apps/videos.png" alt="Videos icon" />
 <div>
