--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
 <div class="whole">
 <div id="dl">
 <div class="column">
-<p class="medium-label">First Alpha :<br> January, 27</p>
+<p class="medium-label">First Alpha :<br> February </p>
 <!--<button disabled type="submit" id="download" class="suggested-action">Download ArtOS Antelope Canyon Alpha</button>-->
 <p class="small-label">
 <span data-l10n-off="1">ArtOS AC : Alpha 1.0 (?? GB)</span><br>
