Add servers Status link
Langs EN/FR

--- a/fr/index.html
+++ b/fr/index.html
@@ -448,6 +448,7 @@ Tiếng Việt </a></li>
 </div>
 </div>
 <ul>
+<li><a target="_blank" href="https://artos-developper.github.io/ArtOS-Status/">Status des serveurs</a></li>
 <li><a >(Confidentialité)</a></li>
 <li><a >(Developeurs)</a></li>
 </ul>
