--- a/fr/index.html
+++ b/fr/index.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<!--[if IE]><html lang="en" class="ie-legacy"><![endif]-->
+<!--[if IE]><html lang="fr" class="ie-legacy"><![endif]-->
 <!--[if !IE]><!--><html lang="fr"><!--<![endif]-->
 <head>
 <meta charset="UTF-8">
