--- a/fr/index.html
+++ b/fr/index.html
@@ -70,7 +70,7 @@ function CheckPageLanguage(){
 <div class="whole">
 <div id="dl">
 <div class="column">
-<p style="text-align:center;" class="medium-label">Première Alpha :<br> Fevrier </p>
+<p style="text-align:center;" class="medium-label">Première Alpha :<br> Mars - Mai </p>
 <!--<button disabled type="submit" id="download" class="suggested-action">Download ArtOS Antelope Canyon Alpha</button>-->
 <p class="small-label">
 <span data-l10n-off="1">ArtOS AC : Alpha 1.0 (?? GB)</span><br>
